<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/patitas_background"
    tools:context=".mismascotas.agregarmascota.AgregarMascotaActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/addPet"
        android:textColor="@color/patitas_text_color"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewRayita"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/patitas_beige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyCentral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/viewRayita">

        <!--    NOMBRE      -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="4dp"
            android:text="@string/name"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/patitas_component"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/patitas_text_color"
                android:textSize="18sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <!--    ESPECIE     -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/species"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/patitas_component"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/etEspecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/patitas_text_color"
                android:textSize="18sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <!--   RAZA-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/race"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/patitas_component"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/etRaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/patitas_text_color"
                android:textSize="18sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <!--    SEXO    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sex"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/female"
                android:textColor="@color/patitas_text_color"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/patitas_text_color"
                android:textSize="16sp" />

        </RadioGroup>

        <!--    FECHA DE NACIMIENTO    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/birthday"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/patitas_component"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:focusable="false"
                android:hint="dd/mm/aa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFechaPendiente" />

        </androidx.cardview.widget.CardView>

        <!--    CASTRADO    -->
        <CheckBox
            android:id="@+id/cbCastrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:text="@string/castrated_select"
            android:textColor="@color/patitas_text_color"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGuardar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyCentral">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>