<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patitas_background"
    tools:context=".pendientes.AgregarPendienteActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/addTask"
        android:textColor="@color/patitas_text_color"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewRayita"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/patitas_beige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo" />

    <TextView
        android:id="@+id/tvMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/pet"
        android:textColor="@color/patitas_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRayita" />

    <Spinner
        android:id="@+id/spMascotas"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/patitas_component"
        app:layout_constraintTop_toBottomOf="@id/tvMascota" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/type"
        android:textColor="@color/patitas_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spMascotas" />

    <Spinner
        android:id="@+id/spTipoPendiente"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/patitas_component"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTipo" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/date"
        android:textColor="@color/patitas_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spTipoPendiente" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:focusable="false"
        android:background="@color/patitas_component"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvFecha"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textColor="@color/patitas_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFecha" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/patitas_component"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGuardar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>