<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patitas_background"
    tools:context=".mismascotas.DetalleMascotaActivity">

    <TextView
        android:id="@+id/tvNombreTitulo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/patitas_text_color"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="nombre" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalleNombre"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/patitas_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreTitulo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                tools:text="nombre" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyDetalleEspecie"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cvDetalleNombre">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:text="@string/species"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEspecie"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            tools:text="especie" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalleRaza"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/patitas_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyDetalleEspecie">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:gravity="center_vertical"
                android:text="@string/race"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRaza"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                tools:text="raza" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyDetalleSexo"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cvDetalleRaza">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            tools:text="sexo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetalleFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="@color/patitas_component"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyDetalleSexo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/lySexo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:gravity="center_vertical"
                android:text="@string/birthday"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/patitas_text_color"
                android:textSize="20sp"
                tools:text="01/01/2021" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyDetalleCastrado"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/cvDetalleFechaNacimiento">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:gravity="center_vertical"
            android:text="@string/castrated_select"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCastrado"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp"
            tools:text="si/no" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEditar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cvEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEliminar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/patitas_text_color"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>