<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/patitas_background"
    tools:context=".MenuActivity">


    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="32dp"
        android:gravity="center_vertical"
        android:text="@string/welcome"
        android:textColor="@color/patitas_text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPendientes"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:text="@string/todo"
        android:textColor="@color/patitas_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida" />

    <View
        android:id="@+id/viewRayita"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:background="@color/patitas_beige"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPendientes" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPendientes"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewRayita">


    </androidx.recyclerview.widget.RecyclerView>


    <!--    mis mascotas    -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMisMascotas"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cvHistorialMedico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_patita"
                app:tint="@color/patitas_component" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myPets"
                android:textColor="@color/patitas_text_color"
                android:textSize="26sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!--    historial   -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvHistorialMedico"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp"
        app:cardBackgroundColor="@color/patitas_rosa"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_registro"
                app:tint="@color/patitas_component" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/patitas_text_color"
                android:textSize="26sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarPendiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:contentDescription="Agregar pendiente"
        android:src="@drawable/ic_mas"
        app:backgroundTint="@color/patitas_beige"
        app:layout_constraintBottom_toTopOf="@id/cvMisMascotas"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/patitas_component">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>